start refactoring TrainerPokemon to be more forme intuitive, introduce new initializer